[package]
name = "emailer"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["transactional-email", "mailer", "sendinblue", "emailing", "email"]
categories = ["web-programming::http-server", "database-implementations", "email"]
description = "Email web service using sendinblue"
repository = "https://github.com/apibillme/emailer"
readme = "README.md"

[dependencies]
